--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="next">NEXT</string>
     <string name="no_pan_text">I don\'t have a PAN</string>
     <string name="info_text">Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href="http://www.google.com/">Learn more</a></string>
+    <string name="success_message">Details submitted successfully</string>
 </resources>
