--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,12 @@
     <string name="title_text">First of the few steps to set you up with a Bank Account</string>
     <string name="logo">Logo Image</string>
     <string name="pan_number">PAN NUMBER</string>
-    <string name="birth_date">BIRTH DATE</string>
-    <string name="day">Day</string>
-    <string name="month">Month</string>
-    <string name="year">Year</string>
+    <string name="birth_date">BIRTHDATE</string>
+    <string name="day">DD</string>
+    <string name="month">MM</string>
+    <string name="year">YYYY</string>
     <string name="next">NEXT</string>
     <string name="no_pan_text">I don\'t have a PAN</string>
-    <string name="info_text">Providing PAN and Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href="http://www.google.com/">Learn more</a></string>
+    <string name="info_text">Providing PAN &amp; Date of Birth helps us find and fetch your KYC from a central registry by the Government of India. <a href="http://www.google.com/">Learn more</a></string>
     <string name="success_message">Details submitted successfully</string>
 </resources>
